Fix overflow in hero section

--- a/src/components/Hero/styles.module.css
+++ b/src/components/Hero/styles.module.css
@@ -1,5 +1,5 @@
 .hero {
-    --hero-min-height: 40rem;
+    --hero-min-height: 24rem;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -7,52 +7,59 @@
     min-height: var(--hero-min-height);
     color: var(--color-text-on-dark);
 
-    .background {
-        position: absolute;
-        z-index: -1;
+    .section {
+        flex-shrink: 0;
         background-color: var(--color-background);
         width: 100%;
-        height: 100%;
-        clip-path: polygon(0 0, 100% 0, 100% 87%, 0 69%);
-    }
 
-    .section {
-        display: flex;
-        flex-grow: 1;
-        justify-content: center;
-        margin: 0 auto;
-        padding: var(--spacing-medium);
-        width: 100%;
-        max-width: var(--width-page-max);
-        gap: var(--spacing-super-large);
-
-        .left {
+        .mainContent {
             display: flex;
-            flex-direction: column;
-            gap: var(--spacing-extra-large);
-            padding-top: var(--spacing-mega-large);
-            max-width: 40rem;
-
-            .heading {
-                color: var(--color-heading-on-dark);
-            }
-
-            .description {
-                font-size: var(--font-size-extra-large);
-            }
-
-            .buttonsContainer {
-                display: flex;
-                flex-wrap: wrap;
-                gap: var(--spacing-medium);
-            }
-        }
-
-        .right {
-            display: flex;
+            position: relative;
             flex-grow: 1;
             justify-content: center;
+            margin: 0 auto;
+            padding: var(--spacing-medium);
+            width: 100%;
+            max-width: var(--width-page-max);
+            gap: var(--spacing-super-large);
+
+            .left {
+                display: flex;
+                flex-direction: column;
+                gap: var(--spacing-extra-large);
+                padding-top: var(--spacing-mega-large);
+                max-width: 40rem;
+
+                .heading {
+                    color: var(--color-heading-on-dark);
+                }
+
+                .description {
+                    font-size: var(--font-size-extra-large);
+                }
+
+                .buttonsContainer {
+                    display: flex;
+                    flex-wrap: wrap;
+                    gap: var(--spacing-medium);
+                }
+            }
+
+            .right {
+                display: flex;
+                flex-grow: 1;
+                justify-content: center;
+                margin-bottom: -10rem;
+            }
         }
+    }
+
+    .angledBackground {
+        border-width: 0 calc(100vw - 1rem) 6rem 0;
+        border-style: solid;
+        border-color: transparent var(--color-background) transparent transparent;
+        width: 0px;
+        height: 0px;
     }
 
     &.withoutRightContent {
@@ -78,10 +85,12 @@
         min-height: unset;
 
         .section {
-            flex-direction: column;
+            .mainContent {
+                flex-direction: column;
 
-            .right {
-                align-self: center;
+                .right {
+                    align-self: center;
+                }
             }
         }
     }
