--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -30,3 +30,17 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
     font-family: var(--font-family-dm-sans), sans-serif;
 }
+
+::-webkit-scrollbar {
+    background-color: var(--color-background-scrollbar);
+    width: var(--width-scrollbar);
+    height: var(--width-scrollbar);
+}
+
+::-webkit-scrollbar-track {
+    background-color: var(--color-background-scrollbar);
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--color-foreground-scrollbar);
+}
